--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="http://medium.com/thierryollivero>Blog</a>
+                        <a href="http://medium.com/thierryollivero">Blog</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">About</a>
