--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Pragmatic: Coaching, Training, Transition Management, Strategy Definition & Implementation">
+    <meta name="author" content="Thierry Ollivero">
 
     <title>Pragmatic - Bring your company where it should be</title>
 
@@ -50,9 +50,6 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="http://medium.com/thierryollivero">Blog</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
@@ -64,6 +61,9 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
+                    <li>
+                        <a href="http://medium.com/@pragmatic">Blog</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -74,9 +74,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Make Your Company <br>Pragmatic Again</h1>
+                <h1 id="homeHeading">Unleash your hidden strengths. <br>Be Pragmatic!  </h1>
                 <hr>
-                <p>Pragmatic will help you transform your company culture to increase your efficiency and reach your objectives!</p>
+                <p>Each individuals and each companies have their own strengths, without always being able to make the most of it. Through our Pragmatic approach, we will help you to identify and use those hidden powers to help you reach your objectives in no time. </p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -86,7 +86,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Our experience to boost Your performance</h2>
+                    <h2 class="section-heading">Our experience to boost your performance</h2>
                     <hr class="light">
                     <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
