--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Unleash your hidden strengths. <br>Be Pragmatic!  </h1>
+                <h1 id="homeHeading">Unleash your hidden strengths <br> <br>Be Pragmatic.  </h1>
                 <hr>
                 <p>Each individuals and each companies have their own strengths, without always being able to make the most of it. Through our Pragmatic approach, we will help you to identify and use those hidden powers to help you reach your objectives in no time. </p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
