--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">Unleash your hidden strengths <br> <br>Be Pragmatic.  </h1>
                 <hr>
-                <p>Each individuals and companies have their own strengths but are very often unable to make the most of it. Through our Pragmatic approach, we will help you identify and use those hidden powers to help you reach your objectives in no time. </p>
+                <p>Each individuals and companies have their own strengths but are not always able to make the most of it. Through our <b>Pragmatic</b> approach, we will help you identify and use those hidden powers to reach your objectives in no time. </p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -88,7 +88,10 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Our experience to boost your performance</h2>
                     <hr class="light">
-                    <p class="text-faded">We have all been confronted to situations where we have the feeling of wasting our time, through inefficient processes, everlasting meetings or disorganized time management. Lost in the complexity of our daily business, we tend to forget the importance of keeping things simple. When common sense is gone, it is time for a change. <br>At Pragmatic, we are helping our customers, partners and friends to regain control of their daily activities. <br>Coaching, Training, Collective Intelligence Workshops, Transition Management, Strategy Consulting, whatever your need, we accompany you through your transformation, keeping at all time a high level of enthusiasm!      </p>
+                    <p class="text-faded">We have all been confronted to situations where we have the feeling of wasting our time, through inefficient processes, everlasting meetings or disorganized time management. <br>
+                        Lost in the complexity of our daily business, we tend to forget the importance of keeping things simple. When common sense is gone, it is time for a change. <br>
+                        At <b>Pragmatic</b>, we are helping our customers, partners and friends to regain control of their daily activities. <br>
+                        Coaching, Training, Collective Intelligence Workshops, Transition Management, Strategy Consulting, whatever your need, we accompany you through your transformation, keeping at all time a high level of enthusiasm!      </p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
                 </div>
             </div>
