--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                     <h2 class="section-heading">Our experience to boost your performance</h2>
                     <hr class="light">
                     <p class="text-faded">We have all been confronted to situations where we have the feeling of wasting our time, through inefficient processes, everlasting meetings or disorganized time management. <br>
-                        Lost in the complexity of our daily business, we tend to forget the importance of keeping things simple. When common sense is gone, it is time for a change. <br>
-                        At <b>Pragmatic</b>, we are helping our customers, partners and friends to regain control of their daily activities. <br>
-                        Coaching, Training, Collective Intelligence Workshops, Transition Management, Strategy Consulting, whatever your need, we accompany you through your transformation, keeping at all time a high level of enthusiasm!      </p>
+                        <br>Lost in the complexity of our daily business, we tend to forget the importance of keeping things simple. When common sense is gone, it is time for a change. <br>
+                        <br>At <b>Pragmatic</b>, we are helping our customers, partners and friends to regain control of their daily activities. <br>
+                        <br>Coaching, Training, Collective Intelligence Workshops, Transition Management, Strategy Consulting, whatever your need, we accompany you through your transformation, keeping at all time a high level of enthusiasm!      </p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
                 </div>
             </div>
