--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-group text-primary sr-icons"></i>
-                        <h3>Individual Coaching</h3>
+                        <h3>Private Coaching</h3>
                         <p class="text-muted">Attend one-to-one sessions to help you reach the next level</p>
                     </div>
                 </div>
