--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                        <h3>Transition Management</h3>
+                        <h3>Transition Tutoring</h3>
                         <p class="text-muted">Ensure the continuity of your business through difficult times or transformation projects</p>
                     </div>
                 </div>
