--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>You have waited long enough!</h2>
-                        <a class="page-scroll" href="#contact">Contact us!</a>
+                <a href="#contact" class="btn btn-default btn-xl sr-button">Contact Us!</a>
             </div>
         </div>
     </aside>
