--- a/index.html
+++ b/index.html
@@ -111,28 +111,28 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-group text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-handshake-o text-primary sr-icons"></i>
                         <h3>Private Coaching</h3>
                         <p class="text-muted">Attend one-to-one sessions to help you reach the next level</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-institution text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-group text-primary sr-icons"></i>
                         <h3>Group Trainings</h3>
                         <p class="text-muted">Harness the power of Collective Intelligence within your company</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-line-chart text-primary sr-icons"></i>
                         <h3>Strategy Consulting</h3>
                         <p class="text-muted">Prepare the future of your company with an experienced strategist</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-umbrella text-primary sr-icons"></i>
                         <h3>Transition Tutoring</h3>
                         <p class="text-muted">Ensure the continuity of your business through difficult times or transformation projects</p>
                     </div>
