--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-handshake-o text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-graduation-cap text-primary sr-icons"></i>
                         <h3>Private Coaching</h3>
                         <p class="text-muted">Attend one-to-one sessions to help you reach the next level</p>
                     </div>
@@ -132,7 +132,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-umbrella text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
                         <h3>Transition Tutoring</h3>
                         <p class="text-muted">Ensure the continuity of your business through difficult times or transformation projects</p>
                     </div>
