--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Unleash your hidden strengths <br> <br>Be Pragmatic.  </h1>
+                <h1 id="homeHeading">Unleash your hidden strengths... <br> <br>Be Pragmatic!  </h1>
                 <hr>
                 <p>Each individuals and companies have their own strengths but are not always able to make the most of it. Through our <b>Pragmatic</b> approach, we will help you identify and use those hidden powers to reach your objectives in no time. </p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
