--- a/index.html
+++ b/index.html
@@ -255,13 +255,17 @@
                     <hr class="primary">
                     <p>Ready to start working with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
+                <div class="col-lg-4 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
                     <p>+33 664 438 147</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
                     <p><a href="mailto:contact@pragmatic.si">contact@pragmatic.si</a></p>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <i class="fa fa-linkedin-square fa-3x sr-contact"></i>
+                    <p><a href="https://www.linkedin.com/in/thierryollivero/">LinkedIn</a></p>
                 </div>
             </div>
         </div>
