--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Ready to start working with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>Ready to start working with us? That's great! <br>Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>You can also Follow us on Twitter, LinkedIn or Medium 
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
@@ -266,6 +267,14 @@
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-linkedin-square fa-3x sr-contact"></i>
                     <p><a href="https://www.linkedin.com/in/thierryollivero/">LinkedIn</a></p>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <i class="fa fa-twitter fa-3x sr-contact"></i>
+                    <p><a href="https://www.twitter.com/pragmaticsi">Twitter</a></p>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <i class="fa fa-medium fa-3x sr-contact"></i>
+                    <p><a href="http://medium.com/@pragmatic">Medium</a></p>
                 </div>
             </div>
         </div>
