--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
                     <p>Ready to start working with us? That's great! <br>Give us a call or send us an email and we will get back to you as soon as possible!</p>
-                    <p>You can also Follow us on Twitter, LinkedIn or Medium 
+                    <p>You can also Follow us on Twitter, LinkedIn or Medium </p>
                 </div>
                 <div class="col-lg-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
