--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@
                     <p>Ready to start working with us? That's great! <br>Give us a call or send us an email and we will get back to you as soon as possible!</p>
                     <p>You can also Follow us on Twitter, LinkedIn or Medium </p>
                 </div>
+            <div class="row">
+            <div class="row">
                 <div class="col-lg-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
                     <p>+33 664 438 147</p>
