--- a/index.html
+++ b/index.html
@@ -254,11 +254,11 @@
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
                     <p>Ready to start working with us? That's great! <br>Give us a call or send us an email and we will get back to you as soon as possible!</p>
-                    <p>You can also Follow us on Twitter, LinkedIn or Medium </p>
+                    <p>You can also Follow us on Twitter, LinkedIn or Medium<br> </p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-2 text-center">
+                <div class="col-lg-2 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
                     <p>+33 664 438 147</p>
                 </div>
