--- a/index.html
+++ b/index.html
@@ -253,10 +253,10 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Ready to start working with us? That's great!</p>
+                    <p>Ready to start working with us? We can't wait!</p>
                     <p>Give us a call or send us an email and we will get back to you as soon as possible!</p>
                     <p>You can also Follow us on Twitter, LinkedIn or Medium</p>
-                    <hr>
+                    <hr class="primary">
                 </div>
             </div>
             <div class="row">
