--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-2 col-lg-offset-1 text-center">
+                <div class="col-lg-2 col-md-4 col-lg-offset-1 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
                     <p>+33 664 438 147</p>
                 </div>
