--- a/index.html
+++ b/index.html
@@ -260,23 +260,25 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-2 col-md-4 col-lg-offset-1 text-center">
+                <div class="col-lg-2 col-sm-4 col-lg-offset-1 text-center">
+                    <div class="service-box">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
                     <p>+33 664 438 147</p>
+                    </div>
                 </div>
-                <div class="col-lg-2 col-md-4 text-center">
+                <div class="col-lg-2 col-sm-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
                     <p><a href="mailto:contact@pragmatic.si">contact@pragmatic.si</a></p>
                 </div>
-                <div class="col-lg-2 col-md-4 text-center">
+                <div class="col-lg-2 col-sm-4 text-center">
                     <i class="fa fa-linkedin-square fa-3x sr-contact"></i>
                     <p><a href="https://www.linkedin.com/in/thierryollivero/">LinkedIn</a></p>
                 </div>
-                <div class="col-lg-2 col-md-4 text-center">
+                <div class="col-lg-2 col-sm-4 text-center">
                     <i class="fa fa-twitter fa-3x sr-contact"></i>
                     <p><a href="https://www.twitter.com/pragmaticsi">Twitter</a></p>
                 </div>
-                <div class="col-lg-2 col-md-4 text-center">
+                <div class="col-lg-2 col-sm-4 text-center">
                     <i class="fa fa-medium fa-3x sr-contact"></i>
                     <p><a href="http://medium.com/@pragmatic">Medium</a></p>
                 </div>
