--- a/index.html
+++ b/index.html
@@ -261,25 +261,23 @@
             </div>
             <div class="row">
                 <div class="col-lg-2 col-sm-4 col-lg-offset-1 text-center">
-                    <div class="service-box">
-                    <i class="fa fa-phone fa-3x sr-contact"></i>
+                    <i class="fa fa-phone fa-3x sr-icons"></i>
                     <p>+33 664 438 147</p>
-                    </div>
                 </div>
                 <div class="col-lg-2 col-sm-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
+                    <i class="fa fa-envelope-o fa-3x sr-icons"></i>
                     <p><a href="mailto:contact@pragmatic.si">contact@pragmatic.si</a></p>
                 </div>
                 <div class="col-lg-2 col-sm-4 text-center">
-                    <i class="fa fa-linkedin-square fa-3x sr-contact"></i>
+                    <i class="fa fa-linkedin-square fa-3x sr-icons"></i>
                     <p><a href="https://www.linkedin.com/in/thierryollivero/">LinkedIn</a></p>
                 </div>
                 <div class="col-lg-2 col-sm-4 text-center">
-                    <i class="fa fa-twitter fa-3x sr-contact"></i>
+                    <i class="fa fa-twitter fa-3x sr-icons"></i>
                     <p><a href="https://www.twitter.com/pragmaticsi">Twitter</a></p>
                 </div>
                 <div class="col-lg-2 col-sm-4 text-center">
-                    <i class="fa fa-medium fa-3x sr-contact"></i>
+                    <i class="fa fa-medium fa-3x sr-icons"></i>
                     <p><a href="http://medium.com/@pragmatic">Medium</a></p>
                 </div>
             </div>
