--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-2 col-sm-4 col-lg-offset-1 text-center">
-                    <i class="fa fa-phone fa-3x sr-icons"></i>
+                    <i class="fa fa-phone fa-3x text-primary sr-icons"></i>
                     <p>+33 664 438 147</p>
                 </div>
                 <div class="col-lg-2 col-sm-4 text-center">
