--- a/index.html
+++ b/index.html
@@ -265,19 +265,19 @@
                     <p>+33 664 438 147</p>
                 </div>
                 <div class="col-lg-2 col-sm-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x sr-icons"></i>
+                    <i class="fa fa-envelope-o fa-3x text-primary sr-icons"></i>
                     <p><a href="mailto:contact@pragmatic.si">contact@pragmatic.si</a></p>
                 </div>
                 <div class="col-lg-2 col-sm-4 text-center">
-                    <i class="fa fa-linkedin-square fa-3x sr-icons"></i>
+                    <i class="fa fa-linkedin-square fa-3x text-primary sr-icons"></i>
                     <p><a href="https://www.linkedin.com/in/thierryollivero/">LinkedIn</a></p>
                 </div>
                 <div class="col-lg-2 col-sm-4 text-center">
-                    <i class="fa fa-twitter fa-3x sr-icons"></i>
+                    <i class="fa fa-twitter fa-3x text-primary sr-icons"></i>
                     <p><a href="https://www.twitter.com/pragmaticsi">Twitter</a></p>
                 </div>
                 <div class="col-lg-2 col-sm-4 text-center">
-                    <i class="fa fa-medium fa-3x sr-icons"></i>
+                    <i class="fa fa-medium fa-3x text-primary sr-icons"></i>
                     <p><a href="http://medium.com/@pragmatic">Medium</a></p>
                 </div>
             </div>
