--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                     <hr class="light">
                     <p class="text-faded">We have all been confronted to situations where we have the feeling of wasting our time, through inefficient processes, everlasting meetings or disorganized time management. <br>
                         <br>Lost in the complexity of our daily business, we tend to forget the importance of keeping things simple. When common sense is gone, it is time for a change. <br>
-                        <br>At <b>Pragmatic</b>, we are helping our customers, partners and friends to regain control of their daily activities. <br>
-                        <br>Coaching, Training, Collective Intelligence Workshops, Transition Management, Strategy Consulting, whatever your need, we accompany you through your transformation, keeping at all time a high level of enthusiasm!      </p>
+                        <br>At <b>Pragmatic</b>, we help our customers, partners and friends to regain control of their daily activities. <br>
+                        <br>Trhough our <a href="#services">services</a>, we accompany your transformation, keeping at all time a high level of enthusiasm!      </p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
                 </div>
             </div>
@@ -113,7 +113,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-graduation-cap text-primary sr-icons"></i>
                         <h3>Private Coaching</h3>
-                        <p class="text-muted">Attend one-to-one sessions to help you reach the next level</p>
+                        <p class="text-muted">Attend one-to-one sessions to develop your leadership and influence skills</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
