--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <p class="text-faded">We have all been confronted to situations where we have the feeling of wasting our time, through inefficient processes, everlasting meetings or disorganized time management. <br>
                         <br>Lost in the complexity of our daily business, we tend to forget the importance of keeping things simple. When common sense is gone, it is time for a change. <br>
                         <br>At <b>Pragmatic</b>, we help our customers, partners and friends to regain control of their daily activities. <br>
-                        <br>Trhough our <a href="#services">services</a>, we accompany your transformation, keeping at all time a high level of enthusiasm!      </p>
+                        <br>Trhough our <a href="#services" style="color:white;">services</a>, we accompany your transformation, keeping at all time a high level of enthusiasm!      </p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
                 </div>
             </div>
