--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">Unleash your hidden strengths... <br> <br>Be Pragmatic!  </h1>
                 <hr>
-                <p>Each individuals and companies have their own strengths but are not always able to make the most of it. Through our <b>Pragmatic</b> approach, we will help you identify and use those hidden powers to reach your objectives in no time. </p>
+                <p>Each one has its own strengths but is not always able to make the most of it. Through our <b>Pragmatic</b> approach, we will help you identify and use those hidden powers to reach your objectives in no time. </p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -90,8 +90,8 @@
                     <hr class="light">
                     <p class="text-faded">We have all been confronted to situations where we have the feeling of wasting our time, through inefficient processes, everlasting meetings or disorganized time management. <br>
                         <br>Lost in the complexity of our daily business, we tend to forget the importance of keeping things simple. When common sense is gone, it is time for a change. <br>
-                        <br>At <b>Pragmatic</b>, we help our customers, partners and friends to regain control of their daily activities. <br>
-                        <br>Trhough our <a href="#services" style="color:white;">services</a>, we accompany your transformation, keeping at all time a high level of enthusiasm!      </p>
+                        <br>At <b>Pragmatic</b>, we help our customers and partners to regain control of their daily activities. <br>
+                        <br>Through our adaptable <a href="#services" style="color:white;">services</a>, we will accompany your transformation, keeping at all time a high level of enthusiasm!      </p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
                 </div>
             </div>
@@ -241,7 +241,7 @@
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2>You have waited long enough!</h2>
+                <h2>Let's add your project to the list!</h2>
                 <a href="#contact" class="btn btn-default btn-xl sr-button">Contact Us!</a>
             </div>
         </div>
@@ -256,7 +256,9 @@
                     <p>Ready to start working with us? We can't wait!</p>
                     <p>Give us a call or send us an email and we will get back to you as soon as possible!</p>
                     <p>You can also Follow us on Twitter, LinkedIn or Medium</p>
+                    <div style="height:10px"></div>
                     <hr class="primary">
+                    <div style="height:100px"></div>
                 </div>
             </div>
             <div class="row">
