--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
-                        <a href="http://medium.com/@pragmatic">Blog</a>
+                        <a href="http://medium.com/@pragmaticsi">Blog</a>
                     </li>
                 </ul>
             </div>
@@ -280,7 +280,7 @@
                 </div>
                 <div class="col-lg-2 col-sm-4 text-center">
                     <i class="fa fa-medium fa-3x text-primary sr-icons"></i>
-                    <p><a href="http://medium.com/@pragmatic">Medium</a></p>
+                    <p><a href="http://medium.com/@pragmaticsi">Medium</a></p>
                 </div>
             </div>
         </div>
