--- a/foodclub/index.html
+++ b/foodclub/index.html
@@ -90,17 +90,17 @@
                     <hr class="light">
                     <iframe width="720" height="540"src="https://www.youtube.com/embed/gfeDSUpAvo4"></iframe></br>
 					<hr class="light">
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Mehr, MEHR!!!</a>
+                    <a href="#agenda" class="page-scroll btn btn-default btn-xl sr-button">Mehr, MEHR!!!</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="services">
+    <section id="agenda">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Services</h2>
+                    <h2 class="section-heading">Agenda</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -109,30 +109,30 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-graduation-cap text-primary sr-icons"></i>
-                        <h3>Private Coaching</h3>
-                        <p class="text-muted">Attend one-to-one sessions to develop your leadership and influence skills</p>
+                        <i class="fa fa-4x fa-share-alt text-primary sr-icons"></i>
+                        <h3>Netzwerk</h3>
+                        <p class="text-muted">bauen Sie Ihr Netzwerk aus</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-group text-primary sr-icons"></i>
-                        <h3>Group Trainings</h3>
-                        <p class="text-muted">Harness the power of Collective Intelligence within your company</p>
+                        <i class="fa fa-4x fa-puzzle-piece text-primary sr-icons"></i>
+                        <h3>Wissenschaft</h3>
+                        <p class="text-muted">Wissensaustausch</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-line-chart text-primary sr-icons"></i>
-                        <h3>Strategy Consulting</h3>
-                        <p class="text-muted">Prepare the future of your company with an experienced strategist</p>
+                        <i class="fa fa-4x fa-magic text-primary sr-icons"></i>
+                        <h3>Sachverstand</h3>
+                        <p class="text-muted">Fachvorträge von Experten</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>Transition Tutoring</h3>
-                        <p class="text-muted">Ensure the continuity of your business through difficult times or transformation projects</p>
+                        <i class="fa fa-4x fa-beer text-primary sr-icons"></i>
+                        <h3>Dinner</h3>
+                        <p class="text-muted">attraktive Abendveranstaltung</p>
                     </div>
                 </div>
             </div>
@@ -148,10 +148,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Freezing & Chilling
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Meat
                                 </div>
                             </div>
                         </div>
@@ -163,10 +163,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Freezing & Chilling
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    IQF
                                 </div>
                             </div>
                         </div>
@@ -178,10 +178,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Freezing & Chilling
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Pizza
                                 </div>
                             </div>
                         </div>
@@ -193,10 +193,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Temperature Control
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Burger
                                 </div>
                             </div>
                         </div>
@@ -208,10 +208,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Ingredients Processing
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    FAT FAT FAT
                                 </div>
                             </div>
                         </div>
@@ -223,10 +223,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Beverages
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Alkoholfrei ist besser
                                 </div>
                             </div>
                         </div>
@@ -239,8 +239,8 @@
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2>Let's add your project to the list!</h2>
-                <a href="#contact" class="btn btn-default btn-xl sr-button">Contact Us!</a>
+                <h2>Lass uns ihre Projekt zur Liste hinzufügen!</h2>
+                <a href="#contact" class="btn btn-default btn-xl sr-button">Kontaktiere uns!</a>
             </div>
         </div>
     </aside>
@@ -251,9 +251,9 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Ready to start working with us? We can't wait!</p>
+                    <p>Ready to join the food club</p>
                     <p>Give us a call or send us an email and we will get back to you as soon as possible!</p>
-                    <p>You can also Follow us on Twitter, LinkedIn or Medium</p>
+                    <p>You can also Follow us on Twitter, LinkedIn or Xing</p>
                     <div style="height:10px"></div>
                     <hr class="primary">
                     <div style="height:100px"></div>
@@ -274,7 +274,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-3 text-center">
                     <i class="fa fa-twitter fa-3x text-primary sr-icons"></i>
-                    <p><a href="https://www.twitter.com/foodclubdach">Twitter</a></p>
+                    <p><a href="https://www.twitter.com/food_club_dach">Twitter</a></p>
                 </div>
                
             </div>
