--- a/foodclub/index.html
+++ b/foodclub/index.html
@@ -249,11 +249,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
+                    <h2 class="section-heading">Kommen Sie mit uns ins Gespräch?</h2>
                     <hr class="primary">
-                    <p>Ready to join the food club</p>
-                    <p>Give us a call or send us an email and we will get back to you as soon as possible!</p>
-                    <p>You can also Follow us on Twitter, LinkedIn or Xing</p>
+                    <p>Wir freuen uns auf Sie! </p>
+                    <p>Rufen Sie uns and oder kontaktieren uns auf LinkedIn or Xing. </p>
+                    <p>Sie können auch uns auf Twitter folgen!</p>
                     <div style="height:10px"></div>
                     <hr class="primary">
                     <div style="height:100px"></div>
