--- a/foodclub/index.html
+++ b/foodclub/index.html
@@ -21,7 +21,7 @@
 
     <!-- Plugin CSS -->
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
-
+	<link rel="icon" href="favicon.ico" />
     <!-- Theme CSS -->
     <link href="css/creative.min.css" rel="stylesheet">
 
