--- a/foodclub/index.html
+++ b/foodclub/index.html
@@ -88,9 +88,9 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Der food club bildet eine Community aus Experten und Interessenten aus der Lebensmittelindustrie. Es stehen der Wissensaustausch und der Ausbau des eigenen Netzwerkes im Vordergrund.</h2>
                     <hr class="light">
-                    <iframe width="720" height="540"src="https://www.youtube.com/embed/gfeDSUpAvo4"></iframe></br>
+                    <iframe width="900" height="540"src="https://www.youtube.com/embed/gfeDSUpAvo4"></iframe></br>
 					<hr class="light">
-                    <a href="#agenda" class="page-scroll btn btn-default btn-xl sr-button">Mehr, MEHR!!!</a>
+                    <a href="#agenda" class="page-scroll btn btn-default btn-xl sr-button">Mehr, MEHR?</a>
                 </div>
             </div>
         </div>
