--- a/foodclub/index.html
+++ b/foodclub/index.html
@@ -53,10 +53,10 @@
                         <a class="page-scroll" href="#about">Food Club</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#Agenda">Agenda</a>
+                        <a class="page-scroll" href="#agenda">Agenda</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#Pictures">Pictures</a>
+                        <a class="page-scroll" href="#pictures">Pictures</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -139,7 +139,7 @@
         </div>
     </section>
 
-    <section class="no-padding" id="portfolio">
+    <section class="no-padding" id="pictures">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
