--- a/foodclub/index.html
+++ b/foodclub/index.html
@@ -252,7 +252,7 @@
                     <h2 class="section-heading">Kommen Sie mit uns ins Gespräch?</h2>
                     <hr class="primary">
                     <p>Wir freuen uns auf Sie! </p>
-                    <p>Rufen Sie uns and oder kontaktieren uns auf LinkedIn or Xing. </p>
+                    <p>Rufen Sie uns an oder kontaktieren uns auf LinkedIn or Xing. </p>
                     <p>Sie können auch uns auf Twitter folgen!</p>
                     <div style="height:10px"></div>
                     <hr class="primary">
