--- a/nachhaltigkeit/index.html
+++ b/nachhaltigkeit/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	<META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
 
     <title>Sustainability Conference 2018</title>
 
