--- a/nachhaltigkeit/index.html
+++ b/nachhaltigkeit/index.html
@@ -23,7 +23,7 @@
                     <a class="logo" href="index.html">
                         
                         <!-- logo image  -->
-                        <img src="assets/images/logo.png" width="80%" alt="Air Liquide">
+                        <--!><img src="assets/images/logo.png" width="80%" alt="Air Liquide"><-->
 
                         </br> Nachhaltigkeit 2018
                     </a>
