--- a/nachhaltigkeit/index.html
+++ b/nachhaltigkeit/index.html
@@ -22,10 +22,8 @@
                 <div class="site-branding">
                     <a class="logo" href="index.html">
                         
-                        <!-- logo image  -->
-                        <!--><img src="assets/images/logo.png" width="80%" alt="Air Liquide"><-->
-
-                        </br> Nachhaltigkeit 2018
+                   
+                        Nachhaltigkeit 2018
                     </a>
                 </div>
 
