--- a/nachhaltigkeit/index.html
+++ b/nachhaltigkeit/index.html
@@ -256,9 +256,9 @@
                 </div>
             </div>
                 
-            <form action="#" id="registration-form">
+            <form action="test.html" id="registration-form">
                 <div class="row">
-                    <div class="col-md-12" id="registration-msg" style="display:none;">
+                    <div class="col-md-12" id="registration-msg" >
                         <div class="alert"></div>
                     </div>
                     <div class="col-sm-6">
