--- a/foodclub2/index.html
+++ b/foodclub2/index.html
@@ -555,7 +555,31 @@ Wir freuen uns auf Sie!</p>
             </div>
         </div>
     </section>
-
+	
+	<section id="twitter" class="section social">
+	<div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="section-title">Social Networks</h3>
+                </div>
+            </div>
+			<div class="row">
+                <div class="col-md-4">
+				<p> Join us on LinkedIn</p>
+				</div>
+			
+			
+                <div class="col-md-4">
+				<p> Join us on Xing</p>
+				</div>
+			    <div class="col-md-4">
+				<p> Follow us on Twitter</p>
+				<a class="twitter-timeline" href="https://twitter.com/food_club_DACH?ref_src=twsrc%5Etfw" data-chrome="noheader" data-tweet-limit="3" ></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+				</div>
+			</div>
+	</div>
+	</section>
+	
     <footer class="site-footer">
         <div class="container">
             <div class="row">
