--- a/foodclub2/index.html
+++ b/foodclub2/index.html
@@ -87,7 +87,7 @@ der Input durch Experten werden dabei immer wichtiger. - Dazu möchten wir Ihnen
 Veranstaltungsreihe „food club“ die Möglichkeit bieten.</p>
 				</div>
 				
-				<div class="col-sm-6 col-sm-offset-2">
+				<div class="col-sm-6 col-sm-offset-2 video-container" >
 					 <iframe width="720" height="405" src="https://www.youtube.com/embed/gfeDSUpAvo4?showinfo=0" frameborder="0" ></iframe>
 					
 				</div></br>
