--- a/onboarding/index.html
+++ b/onboarding/index.html
@@ -16,7 +16,7 @@
 <div style="text-align:center">
 <img src="logo.png" width="20%" alt="AL Logo" align="middle">
 <h3> Welcome to the Air Liquide On Boarding Map</h3>
-<p> Click on a country to display the required information. </p>
+<p> Click on a country to display the required information below the map. </p>
 </div>
 <div id="map-europe">
  <ul class="europe">
